// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlightForm renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedFlightCard - 
        chosen
      </div>
    </div>
  </div>
</body>
`;

exports[`FlightForm when no aircrafts renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedAviaInput - 
        Flight number
         - 
         - 
         - 
         -
         
         - 
        <button
          aria-label="Search"
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div>
          MockedDateInput - 
           - 
          Flight date
           - 
           - 
           -
           
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FlightForm when no chosenFlight and when value is not empty renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedAviaInput - 
        Flight number
         - 
         - 
         - 
        Val
         -
         
         - 
        <button
          aria-label="Search"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div>
          MockedDateInput - 
           - 
          Flight date
           - 
           - 
           -
           
        </div>
      </div>
      <div
        class="MuiBox-root css-ohyvb6"
      >
        <div
          class="MuiBox-root css-hnroeo"
        >
          <div>
            MockedFlightCard - 
          </div>
        </div>
        <div
          class="MuiBox-root css-12z0wuy"
        >
          <div>
            MockedFlightCard - 
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FlightForm when no chosenFlight renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedAviaInput - 
        Flight number
         - 
         - 
         - 
         -
         
         - 
        <button
          aria-label="Search"
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div>
          MockedDateInput - 
           - 
          Flight date
           - 
           - 
           -
           
        </div>
      </div>
      <div
        class="MuiBox-root css-ohyvb6"
      >
        <div
          class="MuiBox-root css-hnroeo"
        >
          <div>
            MockedFlightCard - 
          </div>
        </div>
        <div
          class="MuiBox-root css-12z0wuy"
        >
          <div>
            MockedFlightCard - 
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
